<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/dark_app"
        android:padding="20dp" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:background="@color/blue_app"
            android:orientation="vertical"
            android:padding="10dp" >

            <TextView
                android:id="@+id/textView1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="fill_horizontal"
                android:layout_marginTop="26dp"
                android:gravity="center_horizontal"
                android:text="@string/title_activity_ayuda"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@color/white_app" />

            <TextView
                android:id="@+id/textHelp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="fill_horizontal"
                android:layout_marginTop="32dp"
                android:gravity="center_horizontal"
                android:text="@string/help"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/white_app" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="fill_horizontal"
                android:layout_marginTop="32dp"
                android:gravity="center_horizontal"
                android:text="@string/created_by"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/white_app" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="fill_horizontal"
                android:layout_marginTop="32dp"
                android:gravity="center_horizontal"
                android:text="@string/game_description"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/white_app" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="fill_horizontal"
                android:layout_marginTop="32dp"
                android:gravity="center_horizontal"
                android:text="@string/license"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/white_app" />
        </LinearLayout>
    </RelativeLayout>

</ScrollView>