<!-- <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android" -->
<!-- xmlns:tools="http://schemas.android.com/tools" -->
<!-- android:layout_width="match_parent" -->
<!-- android:layout_height="match_parent" -->
<!-- tools:context="${relativePackage}.${activityClass}" -->
<!-- android:background="@color/backgroundColor_DEFAULT" > -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColor_DEFAULT"
    android:orientation="vertical"
    tools:context="${relativePackage}.${activityClass}" >

    <TextView
        android:id="@+id/textview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/activity_horizontal_margin"
        android:gravity="center_horizontal"
        android:text="@string/title_activity_modo_online"
        android:textColor="@color/white_app"
        android:textSize="@dimen/text_size_login" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin" >

        <ProgressBar
            android:id="@+id/newgame_progress"
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:visibility="gone" />

        <Button
            android:id="@+id/new_game_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:drawableRight="@android:drawable/ic_menu_add"
            android:gravity="center_vertical"
            android:text="@string/new_online_game_button"
            android:textSize="@dimen/text_size" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/buttonSearchOpenRounds"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/activity_horizontal_margin"
            android:clickable="true"
            android:drawableRight="@android:drawable/ic_menu_search"
            android:gravity="center_horizontal"
            android:text="@string/rounds_title"
            android:textColor="@color/white_app"
            android:textSize="@dimen/text_size_login" />
    </LinearLayout>
    <!-- List Divider -->

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dip"
        android:background="?android:attr/listDivider" />

    <!-- ListView (grid_items) -->

    <LinearLayout
        android:id="@+id/layout"
        android:layout_width="wrap_content"
        android:layout_height="fill_parent"
        android:background="@color/grey"
        android:gravity="center_horizontal" >

        <ListView
            android:id="@+id/listview_rounds"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:gravity="center_horizontal" >
        </ListView>
    </LinearLayout>



</LinearLayout><!-- </RelativeLayout> -->
