<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >

    
    <LinearLayout
      android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">      
         <TextView
        android:id="@+id/active_round_username_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="1dp"
        android:gravity="center_vertical|center"
        android:text="@string/username"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/active_round_username_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_vertical|left"
        android:text="row_id" />

    <TextView
        android:id="@+id/active_round_round_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="1dp"
        android:gravity="center_vertical|left"
        android:text="@string/round_id"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/active_round_round_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_vertical|left"
        android:text="row_id" />
        
    </LinearLayout>
   
 <LinearLayout
      android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">
    <TextView
        android:id="@+id/active_round_date_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="1dp"
        android:gravity="center_vertical|left"
        android:text="@string/date_round"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/active_round_date_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_vertical|left"
        android:text="row_id" />

    <!-- <LinearLayout -->
    <!-- android:layout_width="wrap_content" -->
    <!-- android:layout_height="wrap_content" -->
    <!-- android:orientation="vertical" > -->


    <!-- <LinearLayout -->
    <!-- android:layout_width="wrap_content" -->
    <!-- android:layout_height="wrap_content" -->
    <!-- android:orientation="horizontal" > -->


    <!-- <TextView -->
    <!-- android:id="@+id/TextView02" -->
    <!-- android:layout_width="118dp" -->
    <!-- android:layout_height="43dp" -->
    <!-- android:text="@string/wins" -->
    <!-- android:textStyle="bold" -->
    <!-- android:width="20dip" /> -->


    <!-- <TextView -->
    <!-- android:id="@+id/item2" -->
    <!-- android:layout_width="match_parent" -->
    <!-- android:layout_height="match_parent" -->
    <!-- android:text="16" -->
    <!-- android:width="20dip" /> -->
    <!-- </LinearLayout> -->


    <!-- <LinearLayout -->
    <!-- android:layout_width="wrap_content" -->
    <!-- android:layout_height="wrap_content" -->
    <!-- android:orientation="horizontal" > -->


    <!-- <TextView -->
    <!-- android:id="@+id/TextView03" -->
    <!-- android:layout_width="118dp" -->
    <!-- android:layout_height="25dp" -->
    <!-- android:text="@string/defeats" -->
    <!-- android:textStyle="bold" -->
    <!-- android:width="20dip" /> -->


    <!-- <TextView -->
    <!-- android:id="@+id/item3" -->
    <!-- android:layout_width="match_parent" -->
    <!-- android:layout_height="match_parent" -->
    <!-- android:text="16" -->
    <!-- android:width="20dip" /> -->
    <!-- </LinearLayout> -->
    <!-- </LinearLayout> -->
</LinearLayout>
</LinearLayout>